First skeleton of website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+  <div class="row menu-top">
+    <div class="col-md-2 col-md-offset-3 menu-button">HOME</div>
+    <div class="col-md-2 menu-button">Moje Faktury</div>
+    <div class="col-md-2 menu-button">Zarejestruj</div>
+    <div class="col-md-2 menu-button">Regulamin</div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 main-container"></div>
+  </div>
 </body>
 </html>
