--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
 </head>
 <body>
   <div class="row menu-top">
-    <div class="col-md-2 col-md-offset-3 menu-button">HOME</div>
+    <div class="col-md-2 logo">FACTURALLY</div>
+    <div class="col-md-2 col-md-offset-2 menu-button">HOME</div>
     <div class="col-md-2 menu-button">Moje Faktury</div>
     <div class="col-md-2 menu-button">Zarejestruj</div>
     <div class="col-md-2 menu-button">Regulamin</div>
   </div>
   <div class="row">
-    <div class="col-md-12 main-container"></div>
+    <div class="col-md-12 main-container">
+      <div class="main-info">Manage your invoices in the easiest way!</div>
+      <div class="row main-buttons">
+        <button class="main-button" href="#" role="button">Register</button>
+        <button class="main-button" href="#" role="button">Login</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
